# pthread-levenshtein

./: CMakeLists.txt  README.md
cmake/: boilerplate.cmake  gtest_conf.cmake  paths.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  error.h  levenshtein.c  levenshtein.h
src/test/: CMakeLists.txt  test_levenshtein.cpp  test_levenshtein.hpp
